--- a/activities/lang/sr.json
+++ b/activities/lang/sr.json
@@ -7,5 +7,8 @@
   "New Tickets": "Novi Tiketi",
   "You have {0} new tickets.": "Imate {0} nova tiketa.",
   "You have 1 new ticket.": "Imate 1 novi tiket.",
-  "You have no new tickets.": "Nemate novih tiketa."
+  "You have no new tickets.": "Nemate novih tiketa.",
+  "Create Zendesk Ticket": "Kreiraj Zendesk Tiket",
+  "Create Ticket" : "Kreiraj Tiket",
+  "Ticket {0} created." : "Tiket {0} je kreiran."
 }
