Removed whitespace at the end of files, fixed localization.

--- a/activities/lang/sr.json
+++ b/activities/lang/sr.json
@@ -1,6 +1,7 @@
 {
   "Open Tickets": "Otvoreni Tiketi",
   "All Tickets": "Svi Tiketi",
+  "My Tickets": "Svi Tiketi",
   "You have {0} tickets.": "Imate {0} tiketa.",
   "You have 1 ticket.": "Imate 1 tiket.",
   "You have no tickets.": "Nemate tikete.",
